fixes alignment of login,google,facebook buttons

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -154,7 +154,6 @@ p {
 	display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 6px;
   padding: 35px;
   padding-bottom:0px;
   margin-top: -30px;
@@ -202,7 +201,6 @@ p {
   flex-direction: column;
   /*top: 140px;*/
   left: 50%;
-  bottom: 10%;
   transform: translateX(-50%);
   /* background-color: #240046; */
   background-color: var(--light-pink);
@@ -366,7 +364,7 @@ input[type="password"]::-ms-reveal {
   cursor: pointer;
   font-size: 1.5rem;
   font-weight: bold;
-  margin-top: 2px;
+  margin-bottom: 30px;
 }
 
 #google-sign-in::before,
@@ -402,8 +400,8 @@ input[type="password"]::-ms-reveal {
   color: var(--old-rose);
   background-color: #eee;
   cursor: pointer;
-  margin-top: 30px;
-  margin-bottom: 60px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 #register:hover {
@@ -432,9 +430,8 @@ input[type="password"]::-ms-reveal {
 
 .register label {
   color: var(--old-rose);
-  margin-top: 1rem;
-  transform: scale(0.6);
-  font-size:large;
+  font-size: 1.7rem;
+  margin: 20px 0 0 0;
 }
 
 .register label:hover {
@@ -457,7 +454,6 @@ input[type="password"]::-ms-reveal {
 /*Button*/
 .form button {
   width: 95%;
-  height: 30px;
   margin: 12px auto 10%;
   color: #fff;
   background: transparent;
